name:                webapi-docs
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/mageshb/webapi-docs#readme
license:             BSD3
license-file:        LICENSE
author:              Magesh B
maintainer:          magesh85@gmail.com
copyright:           © 2016 Magesh B
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     WebApi.Docs
                       WebApi.Schema
  build-depends:       base >= 4.7 && < 5
                     , webapi >= 0.2
                     , text   >= 1.2
                     , template-haskell
  default-language:    Haskell2010

test-suite webapi-docs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , webapi-docs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mageshb/webapi-docs
