cabal-version:       >=1.10

name:                webapi-openapi
version:             0.1.0.0
synopsis:            OpenAPI model generator for webapi
license:             BSD3
license-file:        LICENSE
author:              Magesh B
maintainer:          magesh85@gmail.com
copyright:           2021 Byteally
build-type:          Simple
extra-source-files:  CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/byteally/webapi

library
  exposed-modules:
      WebApi.OpenAPI
  hs-source-dirs:
      src
  build-depends:
      base                      >= 4.9   && < 5
    , text                      >= 1.2   && < 1.3
    , aeson
    , bytestring
    , openapi3
    , ghc-source-gen
    , ghc
    , ghc-paths
    , insert-ordered-containers
    , unordered-containers
    , mtl
    , containers

  default-language: Haskell2010
  ghc-options: -Wall -Werror -O2

executable openapi-model-generator
  main-is:             Main.hs
  hs-source-dirs:      openapi-model-generator
  build-depends:       base                      >= 4.9   && < 5

  default-language:    Haskell2010
  ghc-options: -Wall -Werror -O2 -threaded -rtsopts -with-rtsopts=-N