cabal-version:      2.4
name:               webapi-reflex-dom
version:            0.3.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Magesh
maintainer:         magesh85@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

library
    exposed-modules:  WebApi.Reflex.Dom
                      WebApi.Reflex.Dom.Router
                      Reflex.Dom.Contrib.MonadRouted
                      Reflex.Dom.Contrib.Router

    build-depends:    base >=4.12.0.0
                    , reflex-dom-core
                    , reflex
                    , webapi-contract
                    , text
                    , http-types
                    , bytestring
                    , jsaddle
                    , jsaddle-dom
                    , ghcjs-dom
                    , lens
                    , uri-bytestring
                    , mtl
                    , ref-tf
                    , exception-transformers
                    , safe-exceptions      >= 0.1.7    && < 0.2
                    
    hs-source-dirs:   src
    default-language: Haskell2010

  if impl(ghcjs)
    build-depends: ghcjs-base


test-suite webapi-reflex-dom-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Devel.hs
    build-depends:    base >=4.12.0.0
                    , webapi-contract
                    , jsaddle
                    , reflex-dom-core
                    , webapi-reflex-dom
                    , reflex
                    , text
    if !impl (ghcjs)
      build-depends: jsaddle-warp
    -- Modules included in this library but not exported.
    -- other-modules:

