name:           webapi-swagger
version:        0.1.0.0
description:    Generate and consume swagger specification for webapi contracts
homepage:       http://byteally.github.io/webapi/
bug-reports:    https://github.com/byteally/webapi/issues
author:         Magesh B
maintainer:     magesh85@gmail.com
copyright:      2018 Byteally
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10
extra-source-files:
    ChangeLog.md
    README.md

source-repository head
  type: git
  location: https://github.com/byteally/webapi

library
  exposed-modules:
      ContractGen
    -- , Contract
  other-modules:
      Paths_webapi_swagger
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , text
    , string-conv
    , swagger2
    , lens
    , aeson
    , bytestring
    , yaml
    , insert-ordered-containers
    , haskell-src-exts
    , directory
    , filepath
    , webapi
    , vector-sized
    , safe
    , finite-typelits
    , split
    , unordered-containers
    , containers
    , http-types
    , transformers
    , webapi-contract
    , vector
    , time
    , containers
  default-language: Haskell2010
  -- ghc-options: -Wall -Werror
  ghc-options: -Wall

executable webapi-swagger-exe
  main-is: Main.hs
  other-modules:
      Paths_webapi_swagger
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
  build-depends:
      base >=4.7 && <5
    , webapi-swagger
  default-language: Haskell2010

test-suite webapi-swagger-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_webapi_swagger
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , webapi-swagger
  default-language: Haskell2010
