name:           webapi-swagger
version:        0.1.0.0
description:    Generate and consume swagger specification for webapi contracts
homepage:       http://byteally.github.io/webapi/
bug-reports:    https://github.com/byteally/webapi/issues
author:         Magesh B
maintainer:     magesh85@gmail.com
copyright:      2018 Byteally
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10
extra-source-files:
    ChangeLog.md
    README.md

source-repository head
  type: git
  location: https://github.com/byteally/webapi

library
  exposed-modules:
      SwaggerGen
      GenerationCore
      Constants
      ContractGenTypes
      HaskellValidation
                  
  other-modules:
      Paths_webapi_swagger
  hs-source-dirs:
      src
  build-depends:
      base                      >= 4.9   && < 4.13
    , text                      >= 1.2   && < 1.3
    , swagger2                  >= 2.3   && < 2.4
    , aeson                     >= 1.0   && < 1.5
    , bytestring                >= 0.10  && < 0.11
    , insert-ordered-containers >= 0.2   && < 0.3
    , haskell-src-exts
    , directory
    , webapi                    == 0.4.*
    , vector-sized              >= 1.0   && < 1.3
    , safe                      >= 0.3   &&  < 0.4
    , finite-typelits
    , split                     
    , unordered-containers      >= 0.2.6 && < 0.3
    , containers                >= 0.5   && < 0.7
    , http-types                >= 0.9   && < 0.13
    , transformers              >= 0.5   && < 0.6              
    , webapi-contract           == 0.4.*
    , vector                    >= 0.11  && < 0.13
    , time                      >= 1.6   && < 1.9
    , interpolate               >= 0.2   && < 0.3
    , yaml                      >= 0.8   && < 0.12
    , hashable
    , mtl
    , megaparsec                >= 7.0   && < 7.2
    , http-media
    , dhall                     >= 1.20  && < 2
    
  default-language: Haskell2010
  ghc-options: -Wall -Werror -O2

executable init-swagger-project
  main-is: Main.hs
  other-modules:
      Paths_webapi_swagger
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
  build-depends:
      base >=4.7 && <5
    , webapi-swagger
    , optparse-applicative      >= 0.14  && < 0.15              
    , text             
  default-language: Haskell2010

test-suite webapi-swagger-test
  type: exitcode-stdio-1.0
  main-is: Main.hs
  other-modules:
      Paths_webapi_swagger
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , http-client            
    , webapi-swagger
    , text
    , http-types
    , bytestring
    , directory
    , process
    , http-client-tls              
                            
  default-language: Haskell2010
